Fix removing invalid values from color input suggestions https://bugs.webkit.org/show_bug.cgi?id=92502

Reviewed by Kent Tamura.

Make ColorInputType::typeMismatchFor() return false for invalid color
values so that they don't appear in the list of suggestions that
ColorInputType::suggestions() returns.

No new tests. Tests to be added in Bug 92075.

* html/ColorInputType.cpp:
(WebCore::ColorInputType::typeMismatchFor):
(WebCore):
* html/ColorInputType.h:
(ColorInputType):


Canonical link: https://commits.webkit.org/110431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123997 268f45cc-cd09-0410-ab3c-d52691b4dbfc